# synapse

./: .dockerignore  justfile  pyproject.toml
docker/: Dockerfile  start.py
modules/cognito/: pyproject.toml
synapse/modules/: cognito.py
synapse/modules/cognito/: cognito.py  setup.cfg
