[metadata]
name = cognito
description = "Allow login via server-side cognito access token"
long_description = file: README.md
long_description_content_type=text/markdown
version = 1.1.22
classifiers=
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3 :: Only


[options]
python_requires = >= 3.7